feat: ai advisor implementation and news api